# flux

./: .gitignore  CODEGEN_IMPLEMENTATION.md  Cargo.toml  README.md  TASK_12_1_SUMMARY.md  TASK_5_2_SUMMARY.md  TASK_5_3_SUMMARY.md  TASK_6_SUMMARY.md
examples/: basic_codegen.rs  codegen_demo.rs  ffi_demo.rs  struct_class_demo.rs  wasm_demo.rs
src/: cli.rs  error.rs  lib.rs  main.rs  position.rs  tools.rs
src/codegen/: js_interop.rs  mod.rs  wasm.rs  wasm_optimizations.rs
src/ffi/: c_types.rs  call.rs  error.rs  marshaling.rs  mod.rs  safety.rs
src/lexer/: mod.rs  token.rs
src/package/: build.rs  config.rs  dependency.rs  metadata.rs  mod.rs  project.rs
src/parser/: ast.rs  mod.rs
src/runtime/: concurrency.rs  error_reporting.rs  gc.rs  mod.rs  result.rs
src/semantic/: mod.rs  symbol_table.rs  type_checker.rs
src/std/: collections.rs  io.rs  mod.rs  string.rs
tests/: build_test.rs  cli_test.rs  codegen_test.rs  collections_test.rs  concurrency_test.rs  error_reporting_test.rs  ffi_integration_test.rs  ffi_test.rs  gc_test.rs  integration_test.rs  io_test.rs  package_test.rs  result_test.rs  string_test.rs  wasm_test.rs
